settings of gulp with django

--- a/niktravel/package.json
+++ b/niktravel/package.json
@@ -18,5 +18,14 @@
   "bugs": {
     "url": "https://github.com/ikkerxd/iktravel/issues"
   },
-  "homepage": "https://github.com/ikkerxd/iktravel#readme"
+  "homepage": "https://github.com/ikkerxd/iktravel#readme",
+  "devDependencies": {
+    "autoprefixer": "^8.5.0",
+    "browser-sync": "^2.24.4",
+    "cssnano": "^3.10.0",
+    "gulp": "^3.9.1",
+    "gulp-plumber": "^1.2.0",
+    "gulp-postcss": "^7.0.1",
+    "gulp-sass": "^4.0.1"
+  }
 }
